--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ go:
   - 1.2
 env:
   - GOARCH=amd64
+before_install:
+ - sudo apt-get -qq jpeg-turbo
+script: go test -v && go test -v -tags jpeg & go test -v -tags turbojpeg
 
