--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ go:
 env:
   - GOARCH=amd64
 before_install:
- - sudo apt-get install -qq jpeg-turbo
+ - sudo apt-get install -qq libjpeg-turbo
 script: go test -v && go test -v -tags jpeg & go test -v -tags turbojpeg
 
