--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ go:
 env:
   - GOARCH=amd64
 before_install:
+ - sudo apt-get update -qq
  - sudo apt-get install -qq libturbojpeg
 script: go test -v && go test -v -tags jpeg & go test -v -tags turbojpeg
 
