--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ env:
   - GOARCH=amd64
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq libturbojpeg
+ - sudo apt-get install -qq libturbojpeg libjpeg-turbo8-dev
 script: go test -v && go test -v -tags jpeg & go test -v -tags turbojpeg
 
